--- a/Forex_Renko_Investing.ipynb
+++ b/Forex_Renko_Investing.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "This code plots the end of day forex renko charts in Python. It makes use of the mplfinance and the investpy packages.\n",
     "\n",
-    "For more information visit:\n",
+    "For more information visit: https://renkotraders.com/trading-matters/plot-forex-eod-and-intraday-renko-charts-in-python/\n",
     "- \n",
     "\n",
     "To install the packages visit: \n",
